--- a/my-app/src/styles/HomeStyle.module.css
+++ b/my-app/src/styles/HomeStyle.module.css
@@ -33,6 +33,13 @@
     width: 1235px;
     max-width: 80vw;
 }
+
+.banner_mobile{
+    display: none;
+    width: 80vw;
+    height: 80vw;
+}
+
 .button p{
     font-family: 'Droid Sans', sans-serif;
     font-weight: 700;
@@ -47,9 +54,11 @@
 
 .main button:hover{
     cursor: pointer;
-    background-color: rgb(252, 194, 0);
+    background-color: var(--veryDarkYellow);
 }
-
+.sidebar{
+    display: none;
+}
 
 
 @media (min-width:800px  ) and (max-width: 1000px)
@@ -64,7 +73,31 @@
 }
 @media (max-width: 800px)
 {
+    .header{
+        display: none;
+    }
+    .sidebar{
+        display: flex;
+    }
   .banner{
     display: none;
+  }
+
+  .banner_mobile {
+    display: flex;
+    margin-top: 20px;
+    width: 90vw;
+    height: 90vw;
+  }
+  .buttons{
+    flex-direction: column;
+    
+  }
+  .button{
+    width: 80vw;
+    margin-bottom: 20px;
+  }
+  .logo2{
+    width: 70vw;
   }
 }
