--- a/my-app/src/styles/HomeStyle.module.css
+++ b/my-app/src/styles/HomeStyle.module.css
@@ -1,85 +1,88 @@
-
-
-
-.button{
-    border: 0;
-    border-radius: 5px;
-    width: 45%;
-    height: 290px;
-    background-color: var(--darkYellow);
-    position: relative;
-
-}
-.main{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-}
-.center{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 1235px;
-}
-.buttons{
-    display: flex;
-    margin-top: 100px;
-    width: 1235px;
-    max-width: 80vw;
-    justify-content: space-between;
-}
-.banner{
-    width: 1235px;
-    max-width: 80vw;
-}
-
-.banner_mobile{
-    display: none;
-    width: 80vw;
-    height: 80vw;
-}
-
-.button p{
-    font-family: 'Droid Sans', sans-serif;
-    font-weight: 700;
-    font-size:25px;
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
-    margin-left: -50px;
+.button {
+  border: 0;
+  border-radius: 5px;
+  width: 45%;
+  height: 290px;
+  background-color: var(--darkYellow);
+  position: relative;
 
 }
 
-
-.main button:hover{
-    cursor: pointer;
-    background-color: var(--veryDarkYellow);
-}
-.sidebar{
-    display: none;
+.main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
+.center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 1235px;
+}
 
-@media (min-width:800px  ) and (max-width: 1000px)
-{
-  .banner{
+.buttons {
+  display: flex;
+  margin-top: 100px;
+  width: 1235px;
+  max-width: 80vw;
+  justify-content: space-between;
+}
+
+.banner {
+  width: 1235px;
+  max-width: 80vw;
+}
+
+.banner_mobile {
+  display: none;
+  width: 80vw;
+  height: 80vw;
+}
+
+.button p {
+  font-family: 'Droid Sans', sans-serif;
+  font-weight: 700;
+  font-size: 25px;
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  margin-left: -50px;
+
+}
+
+.main button:hover {
+  cursor: pointer;
+  background-color: var(--veryDarkYellow);
+}
+
+.sidebar {
+  display: none;
+}
+
+
+@media (min-width:800px) and (max-width: 1000px) {
+  .banner {
     height: 250px;
   }
-  .logo2{
+
+  .logo2 {
     width: 250px;
     height: 50px;
   }
 }
-@media (max-width: 800px)
-{
-    .header{
-        display: none;
-    }
-    .sidebar{
-        display: flex;
-    }
-  .banner{
+
+@media (max-width: 800px) {
+  .header {
+    display: none;
+  }
+
+  .sidebar {
+    display: flex;
+  }
+
+  .banner {
     display: none;
   }
 
@@ -89,15 +92,18 @@
     width: 90vw;
     height: 90vw;
   }
-  .buttons{
+
+  .buttons {
     flex-direction: column;
-    
+
   }
-  .button{
+
+  .button {
     width: 80vw;
     margin-bottom: 20px;
   }
-  .logo2{
+
+  .logo2 {
     width: 70vw;
   }
 }
