--- a/my-app/src/styles/Signup.module.css
+++ b/my-app/src/styles/Signup.module.css
@@ -1,6 +1,6 @@
 .background {
     width:100%;
-    height:calc(100vh - 150px);
+    height:calc(100vh - 100px);
     display:flex;
     flex-direction:column;
     justify-content:center;
@@ -11,31 +11,29 @@
     font-size:15px;
     color: red;
     font-weight:600;
-    margin-bottom: 5px;
 }
-.form a{
-    font-size:14px;
-    margin-top: 10px;
-    font-weight: 600;
-    font-family: 'Droid Sans', 'Helvetica Neue', sans-serif;
-}
+
 .h1{
     font-size:25px;
     font-weight:700;
-    margin-top: 40px;
     margin-bottom: 30px;
     font-family:'Droid Sans', 'Helvetica Neue', sans-serif;
 }
 .form{
-    width:300px;
-    height: 300px;
+    width:700px;
+    height:400px;
+    justify-content: space-between;
     display:flex;
-    flex-direction: column;
+    flex-wrap: wrap;
 }
-
+.form div{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
 .input, .button{
     width:300px;
-    height:50px;
+    height:40px;
     font-size:20px;
     outline:0px;
     border: 1px solid var(--black)   ;
@@ -43,9 +41,12 @@
 }
 .input{
     padding-left:10px;
-    margin-bottom: 20px;
 }
-
+.input::-webkit-outer-spin-button,
+.input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 .button{
     background-color: var(--darkYellow);
     color:var(--black);
