Página de carreta

--- a/my-app/src/styles/HomeStyle.module.css
+++ b/my-app/src/styles/HomeStyle.module.css
@@ -54,7 +54,7 @@
 
 .main button:hover {
   cursor: pointer;
-  background-color: var(--veryDarkYellow);
+  background-color: var(--lightYellow);
 }
 
 .sidebar {
