--- a/my-app/src/styles/LocationsById.module.css
+++ b/my-app/src/styles/LocationsById.module.css
@@ -47,17 +47,17 @@
 .info{
 display: flex;
 flex-direction: column;
-align-items: center;
 text-align: center;
 margin-top: 60px;
 margin-left: 30px;
 width: 400px;
 }
+
 .info h1{
   font-size: 30px;
   font-weight: bold;
 }
-.info>p{
+.specifications p:first-child{
   margin-top: 50px;
   font-weight: 700;
   font-size: 20px;
@@ -81,8 +81,11 @@ width: 400px;
 }
 .info a{
   margin-top: 50px;
-  width: 200px;
+  width: 100%;
   height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .info svg{
   margin-left: 10px;
@@ -91,9 +94,11 @@ width: 400px;
   background-color: rgb(9, 181, 9);
   cursor: pointer;
 }
-.info>p:nth-child(4){
+.info>p:nth-child(3){
+  margin-top: 30px;
   color:green;
   font-size: 25px;
+  font-weight: bold;
 }
 
 @media (max-width: 800px) {
