--- a/my-app/src/styles/LocationsStyle.module.css
+++ b/my-app/src/styles/LocationsStyle.module.css
@@ -29,9 +29,14 @@ cursor: pointer;
     flex-direction: column;
 }
 .range button{
+    background-color: var(--darkYellow);
+    border: 1px solid black;
+    border-radius: 10px;
     width: 100px;
-    margin-top: 10px;
     height: 30px;
+    font-size: 15px;
+    font-weight: bold;
+    margin-top: 10px;
 }
 .container{
     display: flex;
@@ -193,7 +198,6 @@ cursor: pointer;
         display: flex;
         flex-direction: column;
         align-items: center;
-        z-index: 1;
         width: 300px;
         height: 100%;
         border-radius: 10px;
