--- a/my-app/src/styles/user_page/page.module.css
+++ b/my-app/src/styles/user_page/page.module.css
@@ -20,3 +20,15 @@
     position: relative;
   }
 }
+.sidebar{
+  display: none;
+}
+@media (max-width: 800px) {
+  .header {
+    display: none;
+  }
+
+  .sidebar {
+    display: flex;
+  }
+}
