--- a/my-app/src/styles/HomeStyle.module.css
+++ b/my-app/src/styles/HomeStyle.module.css
@@ -1,13 +1,3 @@
-.button {
-  border: 0;
-  border-radius: 5px;
-  width: 45%;
-  height: 290px;
-  background-color: var(--darkYellow);
-  position: relative;
-
-}
-
 .main {
   display: flex;
   justify-content: center;
@@ -22,13 +12,6 @@
   width: 1235px;
 }
 
-.buttons {
-  display: flex;
-  margin-top: 100px;
-  width: 1235px;
-  max-width: 80vw;
-  justify-content: space-between;
-}
 
 .banner {
   width: 1235px;
@@ -41,26 +24,96 @@
   height: 80vw;
 }
 
-.button p {
-  font-family: 'Droid Sans', sans-serif;
-  font-weight: 700;
-  font-size: 25px;
-  position: absolute;
-  bottom: 20px;
-  left: 50%;
-  margin-left: -50px;
-
-}
-
-.main button:hover {
-  cursor: pointer;
-  background-color: var(--lightYellow);
-}
-
 .sidebar {
   display: none;
 }
 
+.carousel {
+  margin-top: 40px;
+  display: flex;
+  width: 1235px;
+  max-width: 80vw;
+  overflow-x: scroll;
+}
+
+.locationsCard{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  margin-right: 20px;
+  width: 200px;
+  margin-bottom: 20px;
+  border: 1px solid var(--white); 
+}
+
+.locationsCard p{
+  font-size: 20px;
+  margin-bottom: 30px;
+}
+.locationsCard p:nth-child(4){
+  font-weight: bold;
+}
+
+.locationsCard h2{
+  font-size: 16px;
+  margin-top: 10px;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
+.locationsCard button{
+  background-color: var(--veryDarkYellow);
+  border:0px;
+  border-radius: 3px;
+  height: 40px;
+  width: 100px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.locationsCard button:hover{
+  cursor: pointer;
+  background-color: var(--darkYellow);
+
+}
+.locationsCard:hover{
+  cursor: pointer;
+  border: 1px solid var(--black); 
+  transition: all 5ms;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.carousel > .div > img, .carousel > .div > p, .carousel > .div > h2, .carousel > .div > button{
+  flex: 0 0 auto;
+  width: 100%;
+}
 
 @media (min-width:800px) and (max-width: 1000px) {
   .banner {
@@ -93,17 +146,4 @@
     height: 90vw;
   }
 
-  .buttons {
-    flex-direction: column;
-
-  }
-
-  .button {
-    width: 80vw;
-    margin-bottom: 20px;
-  }
-
-  .logo2 {
-    width: 70vw;
-  }
 }
