--- a/my-app/src/styles/LocationsStyle.module.css
+++ b/my-app/src/styles/LocationsStyle.module.css
@@ -29,22 +29,29 @@ cursor: pointer;
     flex-direction: column;
 }
 .range button{
-    background-color: var(--darkYellow);
+    background-color: var(--veryDarkYellow);
     border: 1px solid black;
     border-radius: 10px;
-    width: 100px;
-    height: 30px;
+    width: 110px;
+    height: 35px;
     font-size: 15px;
     font-weight: bold;
     margin-top: 10px;
+}
+.range button:hover{
+    background-color: var(--darkYellow);
+    cursor: pointer;
+
 }
 .container{
     display: flex;
 }
 .filter input{
-    width: 100px;
+    width: 110px;
     margin-top: 10px;
     height: 30px;
+    border-radius: 3px;
+    border: 1px solid black;
 }
 .filter h1:first-child{
     font-size: 30px;
@@ -89,7 +96,7 @@ cursor: pointer;
     align-items: center;
     flex-direction: column;
     text-align: center;
-    margin-left: 20px;
+    margin-right: 20px;
     width: 200px;
     margin-bottom: 20px;
     border: 1px solid var(--white); 
@@ -123,7 +130,7 @@ cursor: pointer;
     margin-bottom: 30px;
 }
 .locationsCard button{
-    background-color: var(--yellow);
+    background-color: var(--veryDarkYellow);
     border:0px;
     border-radius: 3px;
     height: 40px;
@@ -135,6 +142,16 @@ cursor: pointer;
     width: 200px;
     height: 40px;
     margin-top: 20px;
+    background-color: var(--veryDarkYellow);
+    border: 1px solid black;
+    border-radius: 5px;
+    font-weight: bold;
+    color: var(--black);
+}
+
+.more button:hover{
+    background-color: var(--darkYellow);
+    cursor: pointer;
 }
 
 .more{
@@ -144,7 +161,7 @@ cursor: pointer;
 }
 .locationsCard button:hover{
     cursor: pointer;
-    background-color: var(--veryDarkYellow);
+    background-color: var(--darkYellow);
 
 }
 .locationsCard:hover{
