--- a/my-app/src/styles/AdmStyle.module.css
+++ b/my-app/src/styles/AdmStyle.module.css
@@ -1,6 +1,70 @@
+.container{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+}
+
+.title{
+  margin-top: 40px;
+  margin-bottom: 40px;
+  font-weight: bold;
+  font-size: 35px;
+  width: 1000px;
+  max-width: 70vw;
+}
+
+.card {
+  display: flex;
+  border: 1px solid var(--black);
+  border-radius: 5px;
+  position: relative;
+  width: 1000px;
+  max-width: 70vw;
+  margin-bottom: 20px;
+}
+.card:hover{
+  cursor: pointer;
+}
+.card div{
+  margin-left: 20px;
+  margin-top: 20px;
+}
+.card h1{
+  font-weight: bold;
+  font-size: 25px;
+  margin-bottom: 50px;
+}
+.card >p{
+  position: absolute;
+  right: 30px;
+  top: 50px;
+  color: var(--light-green);
+  font-weight: bold;
+  font-size: 20px;
+}
+.card >button{
+  position: absolute;
+  right: 30px;
+  top: 90px;
+  background-color: var(--light-green);
+  width: 100px;
+  border: 0px;
+  font-weight: bold;
+  border-radius: 5px;
+  height: 40px;
+}
+.card >button:hover{
+  background-color: var(--strong-green);
+  cursor: pointer;
+}
 
 .sidebar{
     display: none;
+}
+.mobileCard{
+  display: none;
 }
 
 @media (max-width: 800px) {
@@ -11,4 +75,16 @@
     .sidebar {
       display: flex;
     }
+    .cards {
+      display: none;
+  }
+  .mobileCard{
+    display: flex;
+    flex-direction: column;
+    
+  }
+  .mobileCard>div{
+    border: 1px solid var(--black);
+    border-radius: 5px;
+  }
 }
