--- a/my-app/src/styles/HomeStyle.module.css
+++ b/my-app/src/styles/HomeStyle.module.css
@@ -63,7 +63,7 @@
   margin-bottom: 30px;
 }
 .locationsCard button{
-  background-color: var(--veryDarkYellow);
+  background-color: var(--light-green);
   border:0px;
   border-radius: 3px;
   height: 40px;
@@ -74,7 +74,7 @@
 
 .locationsCard button:hover{
   cursor: pointer;
-  background-color: var(--darkYellow);
+  background-color: var(--strong-green);
 
 }
 .locationsCard:hover{
