feat/login adm, delete account e disconnect, front!

--- a/my-app/src/styles/globals.css
+++ b/my-app/src/styles/globals.css
@@ -29,13 +29,14 @@ body {
   --black-1: #111111;
   --white:white;
   --yellow:#F8DA3B;
-  --darkYellow:#fdb601;
+  --darkYellow:#fdad01;
   --veryDarkYellow: rgb(252, 194, 0);
   --lightYellow: rgb(255, 213, 0);
   --gray:rgb(230, 230, 230);
   --gray-light: #dcdcdc;
   --strong-green: #018600;
   --light-green: #14aa14;
+  --red: rgb(175, 7, 7);
   position: relative;
 }
 a{
