--- a/my-app/src/styles/user_page/user_update.module.css
+++ b/my-app/src/styles/user_page/user_update.module.css
@@ -45,7 +45,9 @@
 }
 
 .input,
-.button {
+.button,
+.delete,
+.disconnect {
   width: 100%;
   max-width: 350px;
   height: 50px;
@@ -55,10 +57,83 @@
   border-radius: 3px;
 }
 
+.modal {
+  background-color: var(--light-green);
+  position: fixed;
+  max-width:400px;
+  width:80vw;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.modal h1{
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+.modal p{
+  margin-bottom: 50px;
+  text-align: center;
+}
+.modal button{
+  background-color: var(--veryDarkYellow);
+  color: var(--black);
+  border-radius: 5px;
+  border:1px solid var(--black);
+  width: 100px;
+  height: 35px;
+  font-size: 15px;
+  font-weight: bold;
+}
+.modal button:first-child{
+  background-color: var(--veryDarkYellow);
+}
+.modal button:nth-child(2){
+  background-color: var(--red);
+}
 
+.modal button:nth-child(2):hover{
+  cursor: pointer;
+  background-color: red;
+}
+.modal button:first-child:hover{
+  cursor: pointer;
+  background-color: var(--darkYellow);
+  
+}
+
+
+
+.buttons{
+  width: 300px;
+  display: flex;
+  justify-content: space-between;
+}
 .input {
   padding-left: 10px;
   margin-bottom: 20px;
+}
+.delete{
+  background-color: var(--red);
+  color: white;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+.disconnect{
+  background-color: var(--veryDarkYellow);
+  margin-bottom: 20px;
+}
+
+.delete:hover{
+  cursor: pointer;
+  background-color: red;
+}
+.disconnect:hover{
+  cursor: pointer;
+  background-color: var(--darkYellow);
+  
 }
 
 .button {
@@ -122,7 +197,9 @@
   }
 
   .input,
-  .button {
+  .button,
+  .disconnect,
+  .delete {
     max-width: 500px;
   }
 
