--- a/my-app/src/styles/user_page/user_update.module.css
+++ b/my-app/src/styles/user_page/user_update.module.css
@@ -58,8 +58,10 @@
 }
 
 .modal {
-  background-color: var(--light-green);
+  background-color: var(--gray-light);
   position: fixed;
+  top:calc(50% - 100px);
+  left: calc(50% - 200px);
   max-width:400px;
   width:80vw;
   height: 200px;
@@ -67,6 +69,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  border-radius: 10px;
+  border: 1px solid var(--black);
 }
 .modal h1{
   font-size: 20px;
