--- a/my-app/src/styles/AdmStyle.module.css
+++ b/my-app/src/styles/AdmStyle.module.css
@@ -21,6 +21,7 @@
   border-radius: 5px;
   position: relative;
   width: 1000px;
+  max-width: 100%;
   max-width: 70vw;
   margin-bottom: 20px;
 }
@@ -45,6 +46,54 @@
   font-size: 20px;
 }
 
+.card button{
+  width: 100px;
+  border: 0px;
+  font-weight: bold;
+  border-radius: 5px;
+  height: 40px;
+  cursor: pointer;
+}
+
+.Mycard {
+  display: flex;
+  border: 1px solid var(--black);
+  border-radius: 5px;
+  position: relative;
+  width: 1000px;
+  max-width: 55vw;
+  margin-bottom: 20px;
+}
+.Mycard:hover{
+  cursor: pointer;
+}
+.Mycard div{
+  margin-left: 20px;
+  margin-top: 20px;
+}
+.Mycard h1{
+  font-weight: bold;
+  font-size: 25px;
+  margin-bottom: 50px;
+}
+.Mycard >p{
+  position: absolute;
+  right: 30px;
+  top: 50px;
+  color: var(--light-green);
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.Mycard button{
+  width: 100px;
+  border: 0px;
+  font-weight: bold;
+  border-radius: 5px;
+  height: 40px;
+  cursor: pointer;
+}
+
 .button_adm {
   position: absolute;
   right: 30px;
@@ -62,14 +111,7 @@
   cursor: pointer;
 }
 
-.card button{
-  width: 100px;
-  border: 0px;
-  font-weight: bold;
-  border-radius: 5px;
-  height: 40px;
-  cursor: pointer;
-}
+
 
 .update {
   background-color: var(--darkYellow);
@@ -93,7 +135,9 @@
 .mobileCard{
   display: none;
 }
-
+.MymobileCard{
+  display: none;
+}
 @media (max-width: 800px) {
     .header {
       display: none;
@@ -108,6 +152,15 @@
   .mobileCard{
     display: flex;
     flex-direction: column;
+  }
+  .mobileCard>div{
+    border: 1px solid var(--black);
+    border-radius: 5px;
+  }
+  .MymobileCard{
+    display: flex;
+    flex-direction: column;
+    margin-top: 80px;
   }
   .mobileCard>div{
     border: 1px solid var(--black);
