fix: mobile nav structure and delete pop up adjust

--- a/my-app/src/styles/user_page/navigator.module.css
+++ b/my-app/src/styles/user_page/navigator.module.css
@@ -40,5 +40,28 @@
     position: absolute;
     top: 0; left: 0;
     flex-direction: row;
+    text-align: center;
+    background-color: blue;
+  }
+
+  .father div {
+    width: 100%;
+  }
+}
+
+@media (max-width: 420px) {
+  .father {
+    font-size: 13px;
+  }
+}
+
+
+@media (max-width: 350px) {
+  .father header h4 {
+    display: none;
+  }
+
+  .father {
+    font-size: 14px;
   }
 }
