--- a/my-app/src/styles/user_page/user_update.module.css
+++ b/my-app/src/styles/user_page/user_update.module.css
@@ -71,7 +71,10 @@
   justify-content: center;
   border-radius: 10px;
   border: 1px solid var(--black);
+  height: fit-content;
+  padding: 10px 5px ;
 }
+
 .modal h1{
   font-size: 20px;
   font-weight: 700;
@@ -107,7 +110,6 @@
   background-color: var(--darkYellow);
   
 }
-
 
 
 .buttons{
@@ -194,6 +196,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+    margin: 0px;
   }
 
   .form div h1 {
@@ -205,9 +208,41 @@
   .disconnect,
   .delete {
     max-width: 500px;
+    width: 100%;
   }
 
   .background {
     height: 100%;
   }
 }
+
+@media (max-width: 700px) {
+  .background{
+    margin-top: 100px;
+  }
+}
+
+@media (max-width: 500px) {
+  .modal {
+    left: calc(50% - 40vw);
+    word-wrap:break-word;
+    width: 80vw;
+    text-align: center;
+  }
+
+  .buttons {
+    width: 80%;
+  }
+}
+
+@media (max-width: 320px) {
+  .buttons {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .buttons button {
+    margin-bottom: 10px;
+  }
+}
+
