--- a/my-app/src/styles/LocationsStyle.module.css
+++ b/my-app/src/styles/LocationsStyle.module.css
@@ -105,6 +105,7 @@ cursor: pointer;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 75vw;
 }
 .div select{
     width: 130px;
@@ -271,4 +272,33 @@ cursor: pointer;
         margin-left: 300px;
     }
     
+}
+
+@media (max-width:300px) {
+    .filterMobile{
+        max-width: 95vw;
+    }
+    
+}
+
+@media (max-width:500px){
+    .div select, .div h1{
+        margin-top: 0px;
+        margin-right: 0px;
+        margin-left: 0px;
+        margin-bottom: 0px;
+    }
+    .div h1{
+        margin-top: 20px;
+
+    }
+    .div{
+        justify-content: space-around;
+        align-items: center;
+        flex-direction: column;
+        height: 200px;
+    }
+    .locationsCard{
+        margin-right: 0px;
+    }
 }
