--- a/my-app/src/styles/AdmStyle.module.css
+++ b/my-app/src/styles/AdmStyle.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 450px);
   align-items: center;
 }
 
@@ -15,6 +15,36 @@
   max-width: 70vw;
 }
 
+
+
+.div{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 40px;
+  margin-top: 90px;
+
+}
+.div button{
+  width: 150px;
+  height: 40px;
+  border: 1px solid var(--light-green);
+  border-radius: 5px;
+  margin-top: 20px;
+  font-weight: 600px;
+  font-size: 14px;
+  color: var(--white);
+  cursor: pointer;
+  background-color: var(--light-green);
+}
+
+.div h1{
+  margin-bottom: 50px;
+}
+
+.div button:hover{
+  background-color: var(--strong-green);
+}
 .card {
   display: flex;
   border: 1px solid var(--black);
@@ -173,5 +203,8 @@
   .mobileCard>div{
     border: 1px solid var(--black);
     border-radius: 5px;
+  }
+  .div h1{
+    font-size: 25px;
   }
 }
