--- a/my-app/src/styles/HomeStyle.module.css
+++ b/my-app/src/styles/HomeStyle.module.css
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  min-height: calc(100vh - 450px);
 }
 
 .center {
@@ -16,6 +17,34 @@
 .banner {
   width: 1235px;
   max-width: 80vw;
+}
+
+.notFound{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 20px;
+  font-weight: bold;
+  margin-left: 50px;
+  margin-top: 30px;
+}
+.notFound p{
+  margin-bottom: 30px;
+}
+.notFound button{
+  width: 200px;
+  background-color: var(--light-green);
+  border: 1px solid var(--black);
+  border-radius: 5px;
+  height: 60px;
+  color: var(--white);
+  font-weight: bold;
+  font-size: 15px;
+}
+
+.notFound button:hover{
+  cursor: pointer;
+  background-color: var(--strong-green);
 }
 
 .banner_mobile {
@@ -131,6 +160,10 @@
   }
   .update:hover{
     background-color: var(--veryDarkYellow);
+  }
+  .notFound{
+    margin-top: 100px;
+    margin-left: 0px;
   }
 }
 
