--- a/my-app/src/styles/LoginStyle.module.css
+++ b/my-app/src/styles/LoginStyle.module.css
@@ -7,7 +7,9 @@
     align-items:center;
     position: relative;
 }
-
+.space{
+    height: 10px;
+}
 .p{
     font-size:15px;
     color: red;
@@ -44,7 +46,6 @@
 }
 .input{
     padding-left:10px;
-    margin-bottom: 20px;
 }
 
 .button{
@@ -74,7 +75,12 @@
   }
 
 
-
+.p2{
+    font-size:15px;
+    color: var(--black);
+    font-weight:600;
+        
+}
 .admin{
     border:1px solid black;
     background-color:var(--light-green);
