--- a/my-app/src/styles/Signup.module.css
+++ b/my-app/src/styles/Signup.module.css
@@ -9,10 +9,16 @@
 
 .p{
     font-size:15px;
-    color: red;
+    color: var(--light-red);
     font-weight:600;
+    margin-bottom: 5px;
 }
-
+.p2{
+    font-size:15px;
+    color: var(--black);
+    font-weight:600;
+        
+}
 .h1{
     font-size:25px;
     font-weight:700;
@@ -21,7 +27,6 @@
 }
 .form{
     width:700px;
-    height:400px;
     justify-content: space-between;
     display:flex;
     flex-wrap: wrap;
@@ -30,6 +35,10 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+}
+
+.space{
+    height: 10px;
 }
 .input, .button{
     width:300px;
