--- a/my-app/src/styles/user_page/cart_rental.module.css
+++ b/my-app/src/styles/user_page/cart_rental.module.css
@@ -26,6 +26,11 @@
   font-weight:600;
   margin-bottom: 5px;
 }
+.first input::-webkit-outer-spin-button,
+.first input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 .space{
   height: 10px;
 }
