--- a/my-app/src/styles/user_page/user_update.module.css
+++ b/my-app/src/styles/user_page/user_update.module.css
@@ -168,7 +168,11 @@
   cursor: pointer;
   border: none;
 }
-
+.p2{
+  font-size:16px;
+  color: var(--black); 
+  font-family: 'Roboto', sans-serif;     
+}
 .button:hover {
   background-color: var(--light-green);
 }
@@ -255,7 +259,7 @@
   .buttons {
     flex-direction: column;
     align-items: center;
-  }
+  } 
 
   .buttons button {
     margin-bottom: 10px;
