--- a/my-app/src/styles/HeaderStyle.module.css
+++ b/my-app/src/styles/HeaderStyle.module.css
@@ -45,6 +45,7 @@
     position: fixed;
     bottom:10px;
     left: 8px;
+    z-index: 2;
 }
 .button button{
     background-color: var(--light-green);
