--- a/my-app/src/styles/HomeStyle.module.css
+++ b/my-app/src/styles/HomeStyle.module.css
@@ -36,10 +36,43 @@
   background-color: var(--strong-green);
   border: 1px solid var(--black);
   border-radius: 5px;
-  height: 60px;
+  height: 40px;
   color: var(--white);
   font-weight: bold;
   font-size: 15px;
+}
+
+.myDeleteCarts{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 30px;
+}
+.text{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.myDeleteCarts button{
+  width: 200px;
+  height: 50px;
+  background-color: var(--light-green);
+  margin-bottom: 20px;
+  border:1px solid var(--black);
+  border-radius: 5px;
+  color: var(--white);
+  font-weight: 600;
+}
+.myDeleteCarts button:hover{
+  background-color: var(--strong-green);
+  cursor: pointer;
+}
+
+.myDeleteCarts p{
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 10px;
 }
 
 .notFound button:hover{
@@ -113,13 +146,22 @@
 }
 
 @media (max-width:800px) {
+  .text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .myDeleteCarts button{
+
+    margin-bottom: 0px;
+
+  }
   .locationsCardPersonal{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     text-align: center;
-    margin-right: 20px;
     width: 200px;
     margin-bottom: 20px;
     border: 1px solid var(--black); 
