--- a/my-app/src/styles/LoginStyle.module.css
+++ b/my-app/src/styles/LoginStyle.module.css
@@ -81,60 +81,65 @@
     font-weight:600;
         
 }
-.admin{
-    border:1px solid black;
-    background-color:var(--light-green);
-    max-width:400px;
-    width:80vw;
-    height: 300px;
-    display:flex;
-    border:1px solid, black;
-    border-radius:5px;
-    margin-top:40px;
-    flex-direction:column;
-    justify-content:center;
-    align-items:center;
-    z-index: 1;
-    position:fixed;
-    padding:20px;
-}
 
-.admin input, .admin button{
-      width: 200px;
-      height: 50px;
+.forgot{
+    margin-top: 10px;
+    cursor: pointer;
+}
+.forgotPass{
+    position: absolute;
+    background-color: var(--white);
+    width: 600px;
+    height: 600px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+.forgotPass input, .forgotPass button{
+    width:300px;
+    height:50px;
+    font-size: 18px;
   }
-.admin input{
-    margin-bottom: 20px;
+  .forgotPass input:nth-child(3){
+    margin-top: 10px;
+  }
+.forgotPass input{
     border-radius: 5px; 
-    border: 0px;
+    border: 1px solid var(--black);
     font-weight: bold;
     padding-left: 10px;
+    
 }
-.admin button{
+.forgotPass button{
     background-color: var(--veryDarkYellow);
     border-radius: 5px;
     border: 0px;
     font-weight: bold;
 }
-.admin button:hover{
+.forgotPass button:hover{
     background-color: var(--darkYellow);
     cursor: pointer;
 }
-.admin h1{
-    font-size:18px;
+.forgotPass h1{
+    font-size:22px;
     font-weight:700;
     margin-bottom: 20px;
 }
-.admin svg{
-    position: absolute;
-    right: 5px;
-    top: 5px;
-    font-size:20px;
-}
-.admin svg:hover{
-    cursor: pointer;
-}
+
 @media (max-width: 800px) {
+    
+    .forgotPass{
+        position: absolute;
+        background-color: var(--white);
+        width: 100vw;
+        height: 600px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+    }
+    
     .header {
       display: none;
     }
