--- a/my-app/src/styles/AdmStyle.module.css
+++ b/my-app/src/styles/AdmStyle.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: calc(100vh - 450px);
+  min-height: calc(100vh - 450px);
   align-items: center;
 }
 
