--- a/my-app/src/styles/LoginStyle.module.css
+++ b/my-app/src/styles/LoginStyle.module.css
@@ -1,11 +1,44 @@
-.background {
-    width:100%;
+.left {
+    width:45%;
     height:calc(100vh - 150px);
     display:flex;
     flex-direction:column;
     justify-content:center;
     align-items:center;
     position: relative;
+    margin-right: 5%;
+}
+.background{
+    display: flex;
+    width: 100%;
+    flex-direction: row-reverse;
+}
+.right{
+    width:50%;
+    height:calc(100vh - 150px);
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+    position: relative;
+}
+.right div{
+    width: 60%;
+    text-align: center;
+}
+.title{
+    font-size: 30px;
+    font-weight: 600;
+    margin-bottom: 50px;
+}
+.right p:nth-child(3){
+    margin-top: 20px;
+    margin-bottom: 70px;
+    font-size: 20px;
+}
+.right p{
+    font-size: 20px;
+
 }
 .space{
     height: 10px;
@@ -159,8 +192,22 @@
         justify-content: space-around;
         flex-direction: column;
     }
-    .background {
+    .left {
         height:100%;
-        margin: 180px 0px;
+        margin-top: 100px;
+        margin-right: 0px;
+    }
+    .background{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .right{
+        width: 100vw;
+        margin: 10px 0px;
+    }
+    .right p:nth-child(3){
+        margin-bottom: 0px;
+
     }
   }
