--- a/my-app/src/styles/Signup.module.css
+++ b/my-app/src/styles/Signup.module.css
@@ -6,7 +6,22 @@
     justify-content:center;
     align-items:center;
 }
-
+.checkbox span{
+    color: var(--light-blue);
+    cursor: pointer;
+}
+.checkbox input{
+    width: 15px;
+    margin: 0px;
+}
+.checkbox{
+    font-size: 12px;
+    display: flex;
+    flex-direction: row !important;
+    align-items: center;
+    font-weight: 700;
+    margin-top: 3px;
+}
 .p{
     font-size:15px;
     color: var(--light-red);
@@ -40,6 +55,9 @@
     justify-content: space-around;
 }
 
+.form >div:nth-child(2) p:last-child{
+    font-size: 13px;
+}
 
 .input, .button{
     width:300px;
@@ -107,5 +125,8 @@
     }
     .background {
         height:100%;
+    }
+    .checkbox input{
+        margin-right: 5px;
     }
   }
