--- a/my-app/src/styles/globals.css
+++ b/my-app/src/styles/globals.css
@@ -28,6 +28,7 @@ body {
   --black:black;
   --black-1: #111111;
   --white:white;
+  --white-1:#EEEEEE;
   --yellow:#F8DA3B;
   --darkYellow:#fdad01;
   --veryDarkYellow: rgb(252, 194, 0);
