--- a/my-app/src/styles/FooterStyle.module.css
+++ b/my-app/src/styles/FooterStyle.module.css
@@ -103,6 +103,9 @@
             flex-direction: column;
             align-items: center;
         }
+        .address{
+            text-align: center;
+        }
     }
 
 @media (max-width:300px) {
