--- a/my-app/src/styles/LoginStyle.module.css
+++ b/my-app/src/styles/LoginStyle.module.css
@@ -13,6 +13,24 @@
     width: 100%;
     flex-direction: row-reverse;
 }
+.admin{
+    display: flex;
+    width: 100%;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+}
+@media (min-width:800px) {
+    .admin{
+        display: flex;
+        width: 100%;
+        height:calc(100vh - 150px);
+        flex-direction:column;
+        justify-content:center;
+        align-items:center;
+    }
+}
+
 .right{
     width:50%;
     height:calc(100vh - 150px);
