--- a/my-app/src/styles/HomeStyle.module.css
+++ b/my-app/src/styles/HomeStyle.module.css
@@ -95,6 +95,13 @@
   align-items: center;
   flex-direction: column;
 }
+.modelLeft h1{
+  width: 300px;
+  font-size: 25px;
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 50px;
+}
 .modelLeft input, .modelLeft button{
   width: 250px;
   height: 50px;
@@ -112,9 +119,37 @@
   background-color: var(--veryDarkYellow);
   
 }
-.modelRight{
-  width: 50%;
+.modelRight svg{
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  font-size: 20px;
+  cursor: pointer;
 }
+.modelRight{
+  position: relative;
+  width: 50%;
+  height: 100%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+  padding-right: 50px ;
+}
+.modelRight h1{
+  margin-bottom: 50px;
+  margin-top: 80px;
+  font-size: 30px;
+  font-weight: 700;
+  width: 90%;
+}
+.modelRight p{
+  font-size: 20px;
+  width: 90%;
+  margin-bottom: 10px;
+}
+
 .notFound button:hover{
   cursor: pointer;
   background-color: var(--light-green);
@@ -196,6 +231,23 @@
   transition: all 5ms;
 }
 
+@media (max-width:1100px) {
+  .model{
+    top: calc(50% - 250px);
+    left: calc(50% - 400px);
+    width: 800px;
+  }
+  
+}
+@media (max-width:900px) {
+  .model{
+    top: calc(50% - 250px);
+    left: calc(50% - 350px);
+    width: 700px;
+  }
+  
+}
+
 @media (max-width:800px) {
   .text{
     display: flex;
@@ -205,6 +257,10 @@
   .myDeleteCarts button{
 
     margin-bottom: 0px;
+
+  }
+
+  .model{
 
   }
   .locationsCardPersonal{
@@ -320,5 +376,83 @@
     width: 90vw;
     height: 90vw;
   }
+  .model{
+    position: fixed;
+    top: calc(50% - 250px);
+    left: calc(50% - 40vw);
+    width: 80vw;
+    height: 70vh;
+    border-radius: 5px;
+    flex-direction: column;
+    overflow-y: scroll;
+    
+  }
+  .modelLeft{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    position: relative;
+  }
+  .modelLeft h1{
+    width: 75vw;
+    font-size: 20px;
+    text-align: center;
+    font-weight: bold;
+    margin-top: 30px;
+    margin-bottom: 0px;
+  }
+  .modelLeft input, .modelLeft button{
+    width: 250px;
+    max-width: 80%;
+    height: 50px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    border: 1px solid var(--black);
+    font-size: 18px;
+  }
+  .modelLeft button{
+    background-color: var(--darkYellow);
+    font-weight: 500;
+  }
+  .modelLeft button:hover{
+    cursor: pointer;
+    background-color: var(--veryDarkYellow);
+    
+  }
+  .modelRight svg{
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    font-size: 20px;
+    cursor: pointer;
+  }
+  .modelRight{
+    position: static;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-right: 0px ;
+  }
+  .modelRight h1{
+    margin-bottom: 30px;
+    margin-top: 30px;
+    font-size: 20px;
+    font-weight: 700;
+    width: 100%;
+  }
+  .modelRight p{
+    font-size: 17px;
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  @media (max-height:700px) {
+    .modelLeft h1{
+      margin-top: 120px;
 
+    }
+  }
 }
