--- a/my-app/src/styles/HomeStyle.module.css
+++ b/my-app/src/styles/HomeStyle.module.css
@@ -78,7 +78,7 @@
 .model{
   position: fixed;
   top: calc(50% - 250px);
-  left: calc(50% - 475px);
+  left: calc(50% - 500px);
   width: 1000px;
   height: 500px;
   background-color: var(--white-1) !important;
@@ -88,6 +88,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 10;
 }
 .modelLeft{
   width: 50%;
