--- a/my-app/src/styles/Signup.module.css
+++ b/my-app/src/styles/Signup.module.css
@@ -6,21 +6,37 @@
     justify-content:center;
     align-items:center;
 }
-.checkbox span{
+.checkbox span:nth-child(2){
     color: var(--light-blue);
     cursor: pointer;
+    display: inline;
 }
 .checkbox input{
-    width: 15px;
+    width: 16px;
+    height: 16px;
     margin: 0px;
+    cursor: pointer;
 }
 .checkbox{
-    font-size: 12px;
+    font-size: 15px;
+    width: 300px;
+    height: 30px;
     display: flex;
     flex-direction: row !important;
     align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
     font-weight: 700;
     margin-top: 3px;
+    text-align: start;
+}
+.checkbox label{
+    display: inline;
+    align-items: center;
+
+    justify-content: center;
+    flex-wrap: wrap ;
+    width: 270px;
 }
 .p{
     font-size:15px;
@@ -44,7 +60,7 @@
     font-family:'Droid Sans', 'Helvetica Neue', sans-serif;
 }
 .form{
-    width:700px;
+    min-width:700px;
     justify-content: space-between;
     display:flex;
     flex-wrap: wrap;
@@ -118,7 +134,7 @@
         margin-bottom: 2px;
     }
     .form{
-        width:300px;
+        min-width:300px;
         height:100%;
         justify-content: space-around;
         flex-direction: column;
