--- a/my-app/src/styles/user_page/cart_rental.module.css
+++ b/my-app/src/styles/user_page/cart_rental.module.css
@@ -92,6 +92,9 @@
 
 .second {
   width: 35%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .span{
   font-size: 18px;
@@ -105,8 +108,7 @@
   padding: 20px 10px;
   width: 200px;
   background-color: #333;
-  color: #FFF;
-  text-transform: uppercase;
+  color: var(--white);
   text-align: center;
   display: block;
   margin-top: 10px;
