--- a/my-app/src/styles/HomeStyle.module.css
+++ b/my-app/src/styles/HomeStyle.module.css
@@ -198,7 +198,8 @@
   align-items: center;
   flex-direction: column;
   text-align: center;
-  margin-right: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
   width: 200px;
   margin-bottom: 20px;
   border: 1px solid var(--white); 
